--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "reactsniffer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Detect Code Smells in React-based Web Systems",
   "main": "index.js",
   "preferGlobal": true,
-  "bin": { "reactsniffer": "index.js" },
+  "bin": {
+    "reactsniffer": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
