--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/fabiosferreira/reactsniffer#readme",
   "dependencies": {
     "@babel/parser": "^7.15.6",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "reactsniffer": "^1.0.17"
   }
 }
